代码修改说明

--- a/修改说明.md
+++ b/修改说明.md
@@ -28,3 +28,8 @@
 ## src/components/keyboard/index.js
 
 - 131 行 `SPACE` 改为 `空格键`
+
+## src/containers/index.less
+
+- 29 行 `//img.alicdn.com/tps/TB1qq7kNXXXXXacXFXXXXXXXXXX-400-186.png` 替换为 `../resource/image/TB1qq7kNXXXXXacXFXXXXXXXXXX-400-186.png`
+
